Bug 450369 - Two or more instances are identified with the same number in textual list
Summary: Two or more instances are identified with the same number in textual list
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.27.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2022-02-16 10:46 UTC by Patrick Silva
Modified: 2023-06-23 07:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (107.52 KB, image/png)
2022-02-16 10:46 UTC, Patrick Silva
Details
duplicate.png (38.47 KB, image/png)
2022-02-21 16:49 UTC, Fushan Wen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-02-16 10:46:08 UTC
Created attachment 146809 [details]
screenshot

STEPS TO REPRODUCE
1. open task manager settings and click on 'Behavior' in the left side
2.set 'Clicking grouped task' to 'Shows textual list' and click on 'OK' button
3. open Konsole and create several new instances by pressing ctrl+shift+n repeatedly
4. click on Konsoles grouped in the task manager

OBSERVED RESULT
textual list opens and we see some instances identified with the same number. For example, there are two or more 'bash - Konsole <5>'. Please see the attached screenshot.

EXPECTED RESULT
each instance should have a different number

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Fushan Wen 2022-02-16 11:26:03 UTC
Does the windows with the same number also have the same number in the titlebar?
Comment 2 Patrick Silva 2022-02-16 12:56:43 UTC
(In reply to Fushan Wen from comment #1)
> Does the windows with the same number also have the same number in the
> titlebar?

yes
Comment 3 Fushan Wen 2022-02-21 16:49:31 UTC
Created attachment 147009 [details]
duplicate.png

Can reproduce by running "konsole & konsole & konsole & konsole & konsole & konsole & konsole & konsole & konsole & konsole & konsole & konsole & konsole & konsole & konsole &"
Comment 4 Bug Janitor Service 2023-06-20 22:54:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4199
Comment 5 David Edmundson 2023-06-23 07:49:54 UTC
Git commit 6d83ce30afbcb7f72beb412f1a70ef9d9519ecd4 by David Edmundson.
Committed on 23/06/2023 at 07:32.
Pushed by davidedmundson into branch 'master'.

wayland: Update window caption suffix on map

Window captions have a suffix for disambiguation, based on window
captions of other mapped windows.

In xdgshell we update this when a caption changes, but this could be
before a window is mapped. This can lead to two windows at once having
the same suffix, as a suffix could be used but not in the list of
searched clients.

M  +1    -0    src/waylandwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/6d83ce30afbcb7f72beb412f1a70ef9d9519ecd4