wayland: Update window caption suffix on map

Window captions have a suffix for disambiguation, based on window
captions of other mapped windows.

In xdgshell we update this when a caption changes, but this could be
before a window is mapped. This can lead to two windows at once having
the same suffix, as a suffix could be used but not in the list of
searched clients.

BUG: 450369